--- a/src/FuelTracker/Properties/launchSettings.json
+++ b/src/FuelTracker/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
       }
     },
     "FuelTracker": {
@@ -20,7 +20,7 @@
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000/swagger/ui",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
       },
       "applicationUrl": "http://localhost:5000"
     }
